# python-open-restaurant-django

./: .env.sample  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  .prettierrc  .pylintrc  README.md  docker-compose.yml  manage.py  pyproject.toml  setup  test.sh
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: dependabot-auto-approve.yml  python.yml  python_3_10.yml
api/: admin.py  csv_utils.py  models.py  serializers.py  tests.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_import_data.py
api/migrations/data/: restaurants.csv
api/tests/: test_fastapi_converted_tests.py  test_restaurant_api.py  test_restaurant_api_crud_operations.py
project/: settings.py  urls.py
