[tool.poetry]
name = "python-open-restaurant-django"
version = "0.1.0"
description = ""
authors = ["Matthew Lonis <mattlonis@gmail.com>"]
readme = "README.md"
packages = [{ include = "python_open_restaurant_django" }]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13.1"
django = "^5.1"
django-environ = "^0.12.0"
djangorestframework = "^3.16.0"
psycopg2 = "^2.9.10"

[tool.poetry.group.test.dependencies]
flake8 = "^7.2.0"
parameterized = "^0.9.0"
pylint = "^3.3.6"
pylint-django = "^2.6.1"
pylint-junit = "^0.3.5"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
configupdater = "^3.1.1"
isort = "^6.0.1"
pre-commit = "^4.2.0"
ruamel-yaml = "^0.18.10"
tomlkit = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 125

[tool.isort]
line_length = 125
profile = "black"

[tool.pytest.ini_options]
addopts = "--ignore=./utility-repo-scripts"
log_cli = false
log_cli_level = "WARNING"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
