[tool.poetry]
name = "python-open-restaurant-django"
version = "0.1.0"
description = ""
authors = ["Matthew Lonis <mattlonis@gmail.com>"]
readme = "README.md"
packages = [{ include = "python_open_restaurant_django" }]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13.9"
django = "^6.0"
django-environ = "^0.12.0"
djangorestframework = "^3.16.0"
psycopg2 = "^2.9.10"

[tool.poetry.group.test.dependencies]
flake8 = "^7.3.0"
parameterized = "^0.9.0"
pylint = "^4.0.4"
pylint-django = "^2.7.0"
pylint-junit = "^0.3.5"

[tool.poetry.group.dev.dependencies]
black = "^26.1.0"
configupdater = "^3.1.1"
isort = "^6.0.1"
pre-commit = "^4.5.1"
ruamel-yaml = "^0.19.1"
tomlkit = "^0.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 125

[tool.isort]
line_length = 125
profile = "black"

[tool.pytest.ini_options]
addopts = "--ignore=./utility-repo-scripts"
log_cli = false
log_cli_level = "WARNING"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
